refactor: new Long() 선언 코드 수정